[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemies/base_enemy/EnemyDeath.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/level7_enemies/pulsing_heart/pulsing_heart_shadow.png" type="Texture" id=2]
[ext_resource path="res://enemies/base_enemy/attack.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "death_alt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Death:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Death")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ [ Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 0, -1 ), Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, -1 ), Vector2( -1, -1 ) ] ],
"method": "_attack_fixed"
} ]
}

[node name="PulsingHeartDeath" instance=ExtResource( 1 )]

[node name="Death" parent="." index="0"]
frame = 5
script = ExtResource( 3 )
proj_path = "res://enemies/level7_enemies/pulsing_heart/PulsingHeartProjectile.tscn"
timed_atk = false

[node name="SpawnPos" type="Node2D" parent="Death" index="0"]
position = Vector2( 0, -2 )

[node name="AttackTimer" type="Node" parent="Death" index="1"]

[node name="AttackAnimation" type="Node" parent="Death" index="2"]

[node name="Shadow" parent="." index="1"]
texture = ExtResource( 2 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "death_alt"
anims/death_alt = SubResource( 1 )
